added props to the Card component and conditional rendering to the sold out and online badges

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -55,9 +55,25 @@ section{
     color:#FF5A5F;
 }
 
+.card-list {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    overflow-x: auto;
+}
+
 .card{
     width: 330px;
     font-size: large;
+    flex: 0 0 auto;        
+    display: flex;          
+    flex-direction: column;
+    position: relative;
+}
+
+.card-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .card-image{
@@ -68,4 +84,18 @@ section{
 .card-stats{
     display: flex;
     align-items: center;
+}
+
+.card-price {
+    margin-top: auto;
+}
+
+.card-badge {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-weight: bold;
 }
